--- a/package.json
+++ b/package.json
@@ -7,14 +7,21 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "all": "^0.0.0",
+    "dependencies": "^0.0.1",
+    "in": "^0.19.0",
+    "install": "^0.13.0",
     "json-server": "^0.17.2",
+    "project": "^0.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "the": "^1.0.2",
     "uuid": "^9.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "your": "^0.2.3"
   },
   "scripts": {
     "predeploy": "npm run build",
