--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "const",
   "version": "0.1.0",
-  "homepage": "https://angelnogueiraa.github.io/costs",
+  "homepage": "https://Angelnogueiraa.github.io/costs_react",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
